--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1,5 +1,16 @@
 {
   "header": {
-    "title": "Système de gestion d'ordinateur"
+    "title": "Système de Gestion d'Ordinateur",
+    "computerMenu": {
+      "createComputer": "Nouvel Ordinateur",
+      "listComputers": "Lister tous les ordinateurs"
+    },
+    "companyMenu": {
+      "createCompany": "Nouvelle Compagnie",
+      "listCompanies": "Lister toutes les compagnies"
+    },
+    "settingsMenu": {
+      "createUser": "Nouvel Utilisateur"
+    }
   }
 }
