--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -1,6 +1,6 @@
 {
   "header": {
-    "title": "Sistema de Gerenciamento de Computadores",
+    "title": "Sistema de Gerenciamento de Computador",
     "headerMenu": {
       "computers": "Computadores",
       "companies": "Empresas",
