ajout i18n add and update (#22)
* ajout i18n add and update

* fix Uppercase

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -19,5 +19,9 @@
     "id": "Id",
     "name": "Name",
     "filter": "Filter"
+  },
+  "form": {
+    "add": "Add a computer",
+    "update": "Update a computer"
   }
 }
