--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -19,5 +19,13 @@
     "id": "Id",
     "name": "Nom",
     "filter": "Filtre"
+  },
+  "form": {
+    "add": "Ajouter un ordinateur",
+    "update": "Mettre à jour un ordinateur"
+  },
+  "formCompany" : {
+    "add": "Ajouter une entreprise",
+    "update": "Mettre à jour une entreprise"
   }
 }
