Correction of Company to Manufacturer

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -3,7 +3,7 @@
     "title": "Computer Management System",
     "headerMenu": {
       "computers": "Computers",
-      "companies": "Companies",
+      "companies": "Manufacturers",
       "users": "Users"
     }
   },
