--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -3,7 +3,7 @@
     "title": "Sistema de gestión de computador",
     "headerMenu": {
       "computers": "Computadores",
-      "companies": "Empresas",
+      "companies": "Fabricantes",
       "users": "Usuarios"
     }
   },
