--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -3,7 +3,7 @@
     "title": "Sistema de Gerenciamento de Computador",
     "headerMenu": {
       "computers": "Computadores",
-      "companies": "Empresas",
+      "companies": "Fabricantes",
       "users": "Usuários"
     }
   },
