--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -3,7 +3,7 @@
     "title": "Système de Gestion d'Ordinateur",
     "headerMenu": {
       "computers": "Ordinateurs",
-      "companies": "Entreprises",
+      "companies": "Fabricants",
       "users": "Utilisateurs"
     }
   },
