Correction on translations and pathNames

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -13,9 +13,10 @@
     "introduced": "Introduced",
     "discontinued": "Discontinued",
     "company": "Company",
-    "filter": "Filter"
+    "filter": "Filter",
+    "actions": "Actions"
   },
-  "listCompany": {
+  "listCompanies": {
     "id": "Id",
     "name": "Name",
     "filter": "Filter"
