--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -3,8 +3,11 @@
     "title": "Sistema de gestión de computador",
     "headerMenu": {
       "computers": "Computadores",
-      "companies": "Empresas",
+      "companies": "Fabricantes",
       "users": "Usuarios"
+    },
+    "user": {
+      "logout": "Cerrar sesión"
     }
   },
   "listComputers": {
@@ -12,16 +15,31 @@
     "name": "Nombre",
     "introduced": "Fecha introducida",
     "discontinued": "Fecha descontinuada",
-    "company": "Empresa",
-    "filter": "Filtrar"
+    "company": "Fabricantes",
+    "filter": "Filtrar",
+    "actions": "Acciones",
+    "add": "Añadir",
+    "edit": "Modificar",
+    "delete": "suprimir"
   },
-  "listCompany": {
+  "listCompanies": {
     "id": "Id",
     "name": "Nombre",
     "filter": "Filtrar"
   },
   "form": {
+    "name": "Nombre",
+    "introduced": "Fecha introducida",
+    "discontinued": "Fecha descontinuada",
+    "company": "Fabricantes",
+    "save": "Guardar",
     "add": "Agregar una computadora",
     "update": "Actualizar una computadora"
+  },
+  "login": {
+    "authentification": "Por favor inicie sesión",
+    "userName": "Nombre del usuario",
+    "password": "Contraseña",
+    "login": "Iniciar sesión"
   }
 }
