--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -29,6 +29,7 @@
     "discontinued": "Discontinued",
     "company": "Manufacturers",
     "save": "Save",
+    "cancel": "Cancel",
     "add": "Add a computer",
     "update": "Update a computer"
   },
