--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -28,6 +28,7 @@
     "discontinued": "Fecha descontinuada",
     "company": "Fabricantes",
     "save": "Guardar",
+    "cancel": "Cancelar",
     "add": "Agregar una computadora",
     "update": "Actualizar una computadora"
   },
