--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -28,6 +28,7 @@
     "discontinued": "Date de fin",
     "company": "Fabricants",
     "save": "Enregistrer",
+    "cancel": "Annuler",
     "add": "Ajouter un ordinateur",
     "update": "Mettre à jour un ordinateur"
   },
