--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -28,6 +28,7 @@
     "discontinued": "Data descontinuada",
     "company": "Fabricantes",
     "save": "Guardar",
+    "cancel": "Cancelar",
     "add": "Adicione um computador",
     "update": "Atualize um computador"
   },
