Translation of list-user and correction paginator for all list pages

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -24,6 +24,9 @@
     "company": "Manufacturers",
     "filter": "Filter",
     "actions": "Actions",
+    "userName": "Username",
+    "enabled": "Enabled",
+    "role": "Role",
     "add": "Add",
     "edit": "Edit",
     "delete": "Delete"
