--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -24,6 +24,9 @@
     "company": "Fabricantes",
     "filter": "Filtro",
     "actions": "Ações",
+    "userName": "Nome de usuário",
+    "enabled": "Permitido",
+    "role": "Função",
     "add": "Adicionar",
     "edit": "Modificar",
     "delete": "Suprimir"
