--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -10,6 +10,12 @@
       "logout": "Déconnecter"
     }
   },
+  "landing": {
+    "computers": "Ordinateurs",
+    "companies": "Fabricants",
+    "users": "Utilisateurs",
+    "manage": "Gérer"
+  },
   "list": {
     "id": "Id",
     "name": "Nom",
@@ -18,6 +24,9 @@
     "company": "Fabricants",
     "filter": "Filtre",
     "actions": "Actions",
+    "userName": "Nom d'utilisateur",
+    "enabled": "Activation",
+    "role": "Rôle",
     "add": "Ajouter",
     "edit": "Modifier",
     "delete": "Supprimer"
