--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -10,6 +10,12 @@
       "logout": "Sair da sessão"
     }
   },
+  "landing": {
+    "computers": "Computadores",
+    "companies": "Fabricantes",
+    "users": "Usuários",
+    "manage": "Gerir"
+  },
   "list": {
     "id": "Id",
     "name": "Nome",
@@ -18,6 +24,9 @@
     "company": "Fabricantes",
     "filter": "Filtro",
     "actions": "Ações",
+    "userName": "Nome de usuário",
+    "enabled": "Permitido",
+    "role": "Função",
     "add": "Adicionar",
     "edit": "Modificar",
     "delete": "Suprimir"
