add of message error

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -46,5 +46,8 @@
     "userName": "Username",
     "password": "Password",
     "login": "Login"
+  },
+  "error": {
+    "intrSup": "Introduced date greater than discontinued date"
   }
 }
