--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -46,5 +46,8 @@
     "userName": "Nombre del usuario",
     "password": "Contraseña",
     "login": "Iniciar sesión"
+  },
+  "error": {
+    "intrSup": "Fecha introducida superior a la fecha descontinuada"
   }
 }
