--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -46,5 +46,8 @@
     "userName": "Nome de usuário",
     "password": "Senha",
     "login": "Iniciar sessão"
+  },
+  "error": {
+    "intrSup": "Data de introdução superior a data descontinuada"
   }
 }
