Fixed Action table header in user

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -24,6 +24,7 @@
     "company": "Manufacturers",
     "filter": "Filter",
     "actions": "Actions",
+    "action": "Action",
     "userName": "Username",
     "enabled": "Enabled",
     "role": "Role",
