--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -24,6 +24,7 @@
     "company": "Fabricants",
     "filter": "Filtre",
     "actions": "Actions",
+    "action": "Action",
     "userName": "Nom d'utilisateur",
     "enabled": "Activation",
     "role": "Rôle",
