--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -24,6 +24,7 @@
     "company": "Fabricantes",
     "filter": "Filtro",
     "actions": "Ações",
+    "action": "Ação",
     "userName": "Nome de usuário",
     "enabled": "Permitido",
     "role": "Função",
