--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -24,6 +24,7 @@
     "company": "Fabricantes",
     "filter": "Filtrar",
     "actions": "Acciones",
+    "action": "Acción",
     "userName": "Nombre del usuario",
     "enabled": "Permitido",
     "role": "Papel",
