Fixed Suprimir and name placeholder

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -30,7 +30,7 @@
     "role": "Papel",
     "add": "Añadir",
     "edit": "Modificar",
-    "delete": "suprimir"
+    "delete": "Suprimir"
   },
   "form": {
     "name": "Nombre",
